Добавлены индексы и отчёт по нагрузочному тестированию метода /user/search
